# Get-Started-PyTorch

./: README.md  pyproject.toml
notebook/: water_model.pt
